<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_new"
            android:icon="@drawable/ic_add_circle_black_24dp"
            android:title="@string/new_tracking" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_vector_list"
            android:title="@string/history" />
        <item
            android:id="@+id/nav_properties"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/settings" />
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>

</menu>
